--- a/index.html
+++ b/index.html
@@ -200,9 +200,9 @@
             font-size: 1.2em;
             color: #ffffff;
             text-transform: uppercase;
-            background: linear-gradient(45deg, #2f2f4f, #b8860b);
+            background: linear-gradient(45deg, #2f2f4f, #4b4b7a);
             border: 2px solid #2f2f4f;
-            box-shadow: 0 0 12px rgba(47, 47, 79, 0.7), inset 0 0 6px rgba(184, 134, 11, 0.5);
+            box-shadow: 0 0 12px rgba(47, 47, 79, 0.7), inset 0 0 6px rgba(75, 75, 122, 0.5);
             transition: transform 0.3s ease, box-shadow 0.3s ease;
             cursor: pointer;
         }
